k8s/prometheus/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: quanda.grafana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quanda-grafana
                port:
                  number: 80
